<resources>
    <string name="app_name">Login</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="mobile">Mobile Number</string>
    <string name="password">Password (9+ char)</string>
    <string name="signup">Sign Up</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already a member? Login now.</string>

    <string name="facebook_app_id">818144601651261</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_map_active">Map</string>

    <string name="GPSAlertDialogTitle">GPS is setting</string>
    <string name="GPSAlertDialogMessage">GPS is not enabled. Do you want to go to setting menu</string>
    <string name="action_settings">Settings</string>
    <string name="cancel">Cancel</string>
    <string name="latitude">Latitude : </string>
    <string name="longitude">Longitude : </string>

</resources>
